krizemka: fixed direction history, css overlap

--- a/krizemka/css/style.scss
+++ b/krizemka/css/style.scss
@@ -15,7 +15,7 @@
   font-weight: 500;
   font-size: 13px;
   touch-action: none; // !important
-  // color: var(--font-dark);
+  text-transform: uppercase;
 }
 
 ::selection {
@@ -33,31 +33,30 @@ body {
 
 // --- GRID
 
+#grid-wrapper {
+  z-index: 10; // over #nav(z:5)
+}
+
 #grid {
   background: black;
-  // height: 50vh;
-  // height: 50vh;
-  aspect-ratio: 1;
 
   display: grid;
   grid-template-columns: repeat(var(--grid-size), 1fr);
   grid-template-rows: repeat(var(--grid-size), 1fr);
   gap: 2px;
-  // padding: 2px;
 
+  border: 2px solid black;
   border-radius: 5px;
   overflow: hidden;
-  border: 2px solid black;
 
-  cursor: pointer;
+  cursor: pointer; // prevent flicker
 
   .cell {
     background: #fafafa;
     cursor: pointer;
     width: 22px;
     max-width: calc(90vw / var(--grid-size) - 2px);
-
-    text-transform: uppercase;
+    aspect-ratio: 1;
 
     &.hover,
     &[data-start='true'] {
@@ -79,7 +78,6 @@ body {
     outline: none;
     appearance: none;
 
-    text-transform: uppercase;
     border: 2px solid black;
     border-radius: 5px;
     padding: 2px 18px 2px 7px;
@@ -131,7 +129,8 @@ body {
 // --- NAV
 
 #nav {
-  z-index: 100;
+  z-index: 5; // under #grid(z:10)
+  // background: #ff000022;
 
   pointer-events: none;
   position: fixed;
@@ -148,12 +147,10 @@ body {
     fill: var(--font-light);
     height: 100%;
     width: 100px;
-    font-size: 18px;
     cursor: pointer;
     visibility: hidden; // by default
 
     &:hover {
-      // opacity: 0.7;
       color: var(--font-dark);
       fill: var(--font-dark);
       background: #fcfcfc;
@@ -164,7 +161,7 @@ body {
     transform: scaleX(-1); // left arrow
   }
 
-  @media screen and (max-width: 450px) {
+  @media screen and (max-width: 800px) {
     #navLeft,
     #navRight {
       width: 50px;
